tests/parsing/dimacs/tokens/newline.expected
File "tests/parsing/dimacs/tokens/newline.cnf", line 1, character 1 to line 2, character 0:
 | p
    ^
Error while parsing a p-cnf header, read the newline character,
      but expected the keyword "cnf".
